<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="total_amount">Total Amount: %s</string>
    <string name="costofservice">costOfService</string>
    <string name="custom_amount">Custom amount:</string>
    <string name="ex_10_or_8">ex. 10% or 8%</string>
    <string name="amount_per_person">Amount per person: %s</string>
</resources>